--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@babel/core": "7.15.5",
     "@babel/node": "7.15.4",
     "@babel/preset-env": "7.15.6",
+    "app-root-path": "3.0.0",
     "body-parser": "^1.20.2",
     "dotenv": "10.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "morgan": "1.10.0",
+    "multer": "1.4.3",
     "mysql2": "2.3.0",
     "nodemon": "^2.0.21"
   }
